# dna-assistant

./: .gitignore  .gitleaksignore  .tagpr  CHANGELOG.md  CLAUDE.md  Cargo.toml  Dockerfile  README.md  mise.toml  rust-toolchain.toml
.claude/skills/project-conventions/: SKILL.md
.claude/skills/project-conventions/references/: module-and-project-structure.md  testing-patterns.md
.devcontainer/: devcontainer.json  o2-import-dashboards.sh
.github/: project-config.json
.github/actions/act-setup-rust/: action.yaml
.github/actions/upload-release-assets/: action.yaml
.github/workflows/: _orchestrator.yaml  actionlint.yaml  audit.yaml  cleanup.yaml  docs-ci.yaml  label-sync.yaml  miri.yaml  release-build.yaml  release.yaml  rust-ci.yaml  tagpr.yaml
.mise/: overrides.toml
crates/brust/: Cargo.toml
crates/brust/src/: libs.rs  main.rs
crates/dna-capture/: Cargo.toml
crates/dna-capture/src/: lib.rs  ocr.rs  printwindow.rs  wgc.rs  window.rs
crates/dna-detector/: Cargo.toml
crates/dna-detector/src/: color.rs  config.rs  event.rs  lib.rs  ocr.rs  roi.rs  round_number.rs  state.rs  titlebar.rs
crates/dna-detector/src/detector/: ally_hp.rs  dialog.rs  mod.rs  result.rs  round.rs  skill.rs
crates/dna-detector/tests/: dialog_detector_test.rs  result_roi_test.rs  round_detector_test.rs  round_number_roi_test.rs  skill_detector_test.rs
docs/specs/components/: app.md  capture.md  detection-overview.md  round-detector.md  skill-detector.md  ui.drawio
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: commands.rs  lib.rs  main.rs  metrics.rs  monitor.rs  notification.rs  settings.rs  telemetry.rs
src-tauri/src/telemetry/: conventions.rs  metrics.rs  mod.rs
src-tauri/tests/: round_number_ocr_test.rs
ui/: index.html  main.js  styles.css
