[package]
name = "dna-assistant"
version.workspace = true
default-run = "dna-assistant"
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Tauri v2 desktop assistant for Duet Night Abyss"

[lib]
name = "dna_assistant_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "dna-assistant"

[features]
default = ["otel"]
otel = [
	"dep:gethostname",
	"dep:opentelemetry",
	"dep:opentelemetry_sdk",
	"dep:opentelemetry-otlp",
	"dep:tracing-opentelemetry",
]
otel-logs = [
	"otel",
	"dep:opentelemetry-appender-tracing",
]

[dependencies]
anyhow = { workspace = true }
dna-capture = { path = "../crates/dna-capture" }
dna-detector = { path = "../crates/dna-detector" }
image = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tauri = { version = "2", features = ["devtools"] }
tauri-plugin-notification = "2"
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# OpenTelemetry (optional, behind `otel` feature)
gethostname = { version = "1", optional = true }
opentelemetry = { workspace = true, optional = true }
opentelemetry-appender-tracing = { workspace = true, optional = true }
opentelemetry-otlp = { workspace = true, optional = true }
opentelemetry_sdk = { workspace = true, optional = true }
tracing-opentelemetry = { workspace = true, optional = true }

[build-dependencies]
tauri-build = { version = "2", features = [] }

[lints]
workspace = true
