# - -------------------------------------------------------------------------------------------------
# - Package
# -
[package]
name = "brust"
version.workspace = true
categories = ["command-line-utilities"]
edition.workspace = true
keywords = ["cli", "tool"]
license.workspace = true
repository.workspace = true
description = "A CLI tool built following project rules standards"

[package.metadata.binstall]
pkg-url = "{ repo }/releases/download/v{ version }/{ name }-v{ version }-{ target }.tar.gz"
bin-dir = "{ bin }{ binary-ext }"
pkg-fmt = "tgz"
disabled-strategies = ["quick-install"]

[package.metadata.binstall.overrides.x86_64-pc-windows-msvc]
pkg-url = "{ repo }/releases/download/v{ version }/{ name }-v{ version }-{ target }.zip"
pkg-fmt = "zip"

# - -------------------------------------------------------------------------------------------------
# - Features
# -
[features]
default = ["otel"]
otel = [
	"dep:opentelemetry",
	"dep:opentelemetry_sdk",
	"dep:opentelemetry-otlp",
	"dep:tracing-opentelemetry",
	"dep:opentelemetry-appender-tracing",
]

# - -------------------------------------------------------------------------------------------------
# - Dependencies
# -
[dependencies]
# Core
anyhow.workspace = true
clap.workspace = true

# Data
reqwest.workspace = true
rustls.workspace = true
serde.workspace = true
serde_json.workspace = true

# Random
rand.workspace = true

# Logging
tracing.workspace = true
tracing-subscriber.workspace = true

# OpenTelemetry (optional, behind `otel` feature)
opentelemetry = { workspace = true, optional = true }
opentelemetry-appender-tracing = { workspace = true, optional = true }
opentelemetry-otlp = { workspace = true, optional = true }
opentelemetry_sdk = { workspace = true, optional = true }
tracing-opentelemetry = { workspace = true, optional = true }

# - -------------------------------------------------------------------------------------------------
# - Dev Dependencies
# -
[dev-dependencies]
assert_cmd.workspace = true
predicates.workspace = true
tempfile.workspace = true
tracing-mock.workspace = true

# - -------------------------------------------------------------------------------------------------
# - Lints
# -
[lints]
workspace = true
