[package]
name = "dna-capture"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Windows screen capture and OCR backends for DNA Online assistant"

[dependencies]
anyhow = { workspace = true }
image = { workspace = true }
tracing = { workspace = true }

[target.'cfg(target_os = "windows")'.dependencies]
win-screenshot = "4.0"
windows = { version = "0.62", features = [
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",
] }
windows-capture = "1.5"

[lints]
workspace = true
